# pixelmap

./: .gitignore  CMakeLists.txt  COPYING  LICENSE  README.md  partitions.csv  sdkconfig.defaults
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: ci.yml  codeql.yml  pr-automation.yml  release.yml
boards/: README.md  wled_esp32_default.json
components/artnet/: CMakeLists.txt
components/artnet/include/: artnet.h
components/artnet/src/: artnet.c
components/audio/: CMakeLists.txt
components/audio/include/: audio.h
components/audio/src/: audio.c
components/color/: CMakeLists.txt
components/color/include/: color_engine.h  color_types.h
components/color/src/: color_engine.c
components/config_store/: CMakeLists.txt
components/config_store/include/: config_store.h  pm_version.h
components/config_store/src/: config_store.c
components/effect_lua/: CMakeLists.txt
components/effect_lua/include/: effect_lua.h
components/effect_lua/src/: effect_lua.c
components/effects/: CMakeLists.txt
components/effects/include/: effects.h
components/effects/src/: effects.c
components/led_driver/: CMakeLists.txt
components/led_driver/include/: led_chipsets.h  led_strip.h
components/led_driver/src/: led_chipsets.c  led_encode.c  led_strip.c
components/lua/: CMakeLists.txt  COPYRIGHT
components/map_store/: CMakeLists.txt
components/map_store/include/: map_store.h
components/map_store/src/: map_store.c
components/mapping/: CMakeLists.txt
components/mapping/include/: pixel_map.h
components/mapping/src/: pixel_map.c
components/ota_update/: CMakeLists.txt
components/ota_update/include/: ota_update.h
components/ota_update/src/: ota_update.c
components/pov/: CMakeLists.txt
components/pov/include/: pov.h
components/pov/src/: pov.c
components/presets/: CMakeLists.txt
components/presets/include/: presets.h
components/presets/src/: presets.c
components/sacn/: CMakeLists.txt
components/sacn/include/: sacn.h
components/sacn/src/: sacn.c
components/security/: CMakeLists.txt
components/security/include/: pm_security.h
components/security/src/: pm_security.c
components/status_led/: CMakeLists.txt
components/status_led/include/: status_led.h
components/status_led/src/: status_led.c
components/web_ui/: CMakeLists.txt  index.html
components/web_ui/include/: web_ui.h
components/web_ui/src/: web_ui.c
components/wifi_mgr/: CMakeLists.txt
components/wifi_mgr/include/: wifi_mgr.h
components/wifi_mgr/src/: wifi_mgr.c
docs/: ARCHITECTURE.md  PROJECT_EVALUATION_AND_ROADMAP.md  SECURITY.md
main/: CMakeLists.txt  main.c
tools/: web_ui_dev_server.py
tools/virtbench/: CMakeLists.txt  main.c
tools/virtbench/stubs/: effect_lua_stub.c  esp_err.h
